--- a/package.json
+++ b/package.json
@@ -15,5 +15,74 @@
   "bugs": {
     "url": "https://github.com/NewsInShorts/is-visualization/issues"
   },
-  "homepage": "https://github.com/NewsInShorts/is-visualization#readme"
+  "homepage": "https://github.com/NewsInShorts/is-visualization#readme",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+ "dependencies": {
+    "ejs": "^2.4.1",
+    "express": "latest",
+    "express-session": "latest",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "lodash": "latest",
+    "memory-cache": "^0.1.4",
+    "mime": "^1.3.4",
+    "moment": "^2.11.2",
+    "multer": "^1.1.0",
+    "natural": "latest",
+    "node-fetch": "^1.4.1",
+    "passport": "latest",
+    "passport-google-oauth": "latest",
+    "rc-time-picker": "^1.1.4",
+    "react": "^0.14.7",
+    "react-datepicker": "^0.27.0",
+    "react-dom": "latest",
+    "react-inlinesvg": "^0.4.2",
+    "react-redux": "latest",
+    "redux": "latest",
+    "redux-socket.io": "latest",
+    "redux-thunk": "latest",
+    "request": "^2.65.0",
+    "socket.io": "latest",
+    "socket.io-client": "latest",
+    "ssh2": "^0.5.0",
+    "webshot": "^0.18.0",
+    "whatwg-fetch": "^0.11.0",
+    "xml2js": "^0.4.15"
+  },
+  "peerDependencies": {
+    "babel-core": "^6.0.0",
+    "webpack": "1 || ^2.1.0-beta"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.11.2",
+    "css-loader": "^0.23.1",
+    "deep-diff": "^0.3.3",
+    "del": "^2.0.2",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "express-minify": "^0.2.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "latest",
+    "gulp-load-plugins": "latest",
+    "gulp-nodemon": "latest",
+    "gulp-uglify": "^1.0.1",
+    "gulp-webpack": "^1.5.0",
+    "moment": "^2.13.0",
+    "react-hot-loader": "^1.3.0",
+    "request": "^2.72.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.8.2",
+    "webpack-hot-middleware": "^2.7.1",
+    "webpack-stream": "^3.1.0"
+  }
 }
+
