--- a/package.json
+++ b/package.json
@@ -29,27 +29,17 @@
     "memory-cache": "^0.1.4",
     "mime": "^1.3.4",
     "moment": "^2.11.2",
-    "multer": "^1.1.0",
     "natural": "latest",
     "node-fetch": "^1.4.1",
-    "passport": "latest",
-    "passport-google-oauth": "latest",
-    "rc-time-picker": "^1.1.4",
     "react": "^0.14.7",
-    "react-datepicker": "^0.27.0",
     "react-dom": "latest",
-    "react-inlinesvg": "^0.4.2",
     "react-redux": "latest",
     "redux": "latest",
     "redux-socket.io": "latest",
     "redux-thunk": "latest",
     "request": "^2.65.0",
     "socket.io": "latest",
-    "socket.io-client": "latest",
-    "ssh2": "^0.5.0",
-    "webshot": "^0.18.0",
-    "whatwg-fetch": "^0.11.0",
-    "xml2js": "^0.4.15"
+    "socket.io-client": "latest"
   },
   "peerDependencies": {
     "babel-core": "^6.0.0",
@@ -63,17 +53,10 @@
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.11.2",
     "css-loader": "^0.23.1",
-    "deep-diff": "^0.3.3",
     "del": "^2.0.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-minify": "^0.2.0",
-    "gulp": "^3.9.0",
-    "gulp-concat": "latest",
-    "gulp-load-plugins": "latest",
-    "gulp-nodemon": "latest",
-    "gulp-uglify": "^1.0.1",
-    "gulp-webpack": "^1.5.0",
     "moment": "^2.13.0",
     "react-hot-loader": "^1.3.0",
     "request": "^2.72.0",
