--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "is-visualization",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,30 +16,49 @@
     "url": "https://github.com/NewsInShorts/is-visualization/issues"
   },
   "homepage": "https://github.com/NewsInShorts/is-visualization#readme",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
- "dependencies": {
+  "dependencies": {
+    "babel-core": "^6.9.0",
+    "body-parser": "latest",
+    "connect-redis": "^3.0.1",
+    "cookie-parser": "latest",
+    "cron": "latest",
     "ejs": "^2.4.1",
     "express": "latest",
     "express-session": "latest",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flat-file-db": "^0.1.5",
+    "ioredis": "latest",
+    "jquery": "^2.2.3",
+    "json2xls": "^0.1.1",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "lodash": "latest",
     "memory-cache": "^0.1.4",
     "mime": "^1.3.4",
-    "moment": "^2.11.2",
+    "moment": "^2.13.0",
+    "multer": "^1.1.0",
     "natural": "latest",
     "node-fetch": "^1.4.1",
+    "passport": "latest",
+    "passport-google-oauth": "latest",
+    "rc-time-picker": "^1.1.4",
     "react": "^0.14.7",
+    "react-datepicker": "^0.27.0",
     "react-dom": "latest",
+    "react-inlinesvg": "^0.4.2",
     "react-redux": "latest",
+    "react-select": "^1.0.0-beta13",
     "redux": "latest",
     "redux-socket.io": "latest",
     "redux-thunk": "latest",
     "request": "^2.65.0",
     "socket.io": "latest",
-    "socket.io-client": "latest"
+    "socket.io-client": "latest",
+    "ssh2": "^0.5.0",
+    "webpack-manifest-plugin": "^1.0.1",
+    "webshot": "^0.18.0",
+    "whatwg-fetch": "^0.11.0",
+    "xml2js": "^0.4.15"
   },
   "peerDependencies": {
     "babel-core": "^6.0.0",
@@ -57,6 +76,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-minify": "^0.2.0",
+    "less-loader": "^2.2.3",
     "moment": "^2.13.0",
     "react-hot-loader": "^1.3.0",
     "request": "^2.72.0",
@@ -65,7 +85,7 @@
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.8.2",
     "webpack-hot-middleware": "^2.7.1",
+    "webpack-manifest-plugin": "^1.0.1",
     "webpack-stream": "^3.1.0"
   }
 }
-
