--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flat-file-db": "^0.1.5",
     "ioredis": "latest",
     "jquery": "^2.2.3",
+    "json-loader": "^0.5.4",
     "json2xls": "^0.1.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
@@ -42,11 +43,11 @@
     "passport": "latest",
     "passport-google-oauth": "latest",
     "rc-time-picker": "^1.1.4",
-    "react": "^0.14.7",
+    "react": "15.3.0",
     "react-datepicker": "^0.27.0",
-    "react-dom": "latest",
+    "react-dom": "15.2.1",
     "react-inlinesvg": "^0.4.2",
-    "react-redux": "latest",
+    "react-redux": "4.4.5",
     "react-select": "^1.0.0-beta13",
     "redux": "latest",
     "redux-socket.io": "latest",
